[project]
name = "better-repo-sense"
version = "0.1.0"
description = "A simple TUI tool to probe GitHub contributions"
readme = "README.md"
license = {text = "MIT"}
requires-python = "==3.14.4"
dependencies = [
    "gitdb==4.0.12",
    "gitpython==3.1.47",
    "linkify-it-py==2.1.0",
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "platformdirs==4.9.6",
    "prompt-toolkit==3.0.52",
    "pygments==2.20.0",
    "questionary==2.1.1",
    "requests>=2.32",
    "rich==15.0.0",
    "smmap==5.0.3",
    "textual==8.2.4",
    "typing-extensions==4.15.0",
    "uc-micro-py==2.0.0",
    "wcwidth==0.6.0",
    "python-lsp-server",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]
